compileproblems
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:20:8: error: unknown type name ‘function_entry’
 static function_entry php_taglib_functions[] = {
        ^
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: warning: braces around scalar initializer
     PHP_FE(taglib_test_func, NULL) 
     ^
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: warning: (near initialization for ‘php_taglib_functions[0]’)
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: warning: initialization makes integer from pointer without a cast
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: warning: (near initialization for ‘php_taglib_functions[0]’)
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: warning: excess elements in scalar initializer
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: warning: (near initialization for ‘php_taglib_functions[0]’)
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: warning: excess elements in scalar initializer
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: warning: (near initialization for ‘php_taglib_functions[0]’)
In file included from /usr/local/include/php/main/php.h:39:0,
                 from /home/tso/taglib-php/php-5.6.7/ext/taglib/php_taglib.h:16,
                 from /home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:1:
/usr/local/include/php/Zend/zend_API.h:71:129: warning: excess elements in scalar initializer
 #define ZEND_FENTRY(zend_name, name, arg_info, flags) { #zend_name, name, arg_info, (zend_uint) (sizeof(arg_info)/sizeof(struct _zend_arg_info)-1), flags },
                                                                                                                                 ^
/usr/local/include/php/Zend/zend_API.h:77:38: note: in expansion of macro ‘ZEND_FENTRY’
 #define ZEND_FE(name, arg_info)      ZEND_FENTRY(name, ZEND_FN(name), arg_info, 0)
                                      ^
/usr/local/include/php/main/php.h:352:18: note: in expansion of macro ‘ZEND_FE’
 #define PHP_FE   ZEND_FE
                  ^
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: note: in expansion of macro ‘PHP_FE’
     PHP_FE(taglib_test_func, NULL) 
     ^
/usr/local/include/php/Zend/zend_API.h:71:129: warning: (near initialization for ‘php_taglib_functions[0]’)
 #define ZEND_FENTRY(zend_name, name, arg_info, flags) { #zend_name, name, arg_info, (zend_uint) (sizeof(arg_info)/sizeof(struct _zend_arg_info)-1), flags },
                                                                                                                                 ^
/usr/local/include/php/Zend/zend_API.h:77:38: note: in expansion of macro ‘ZEND_FENTRY’
 #define ZEND_FE(name, arg_info)      ZEND_FENTRY(name, ZEND_FN(name), arg_info, 0)
                                      ^
/usr/local/include/php/main/php.h:352:18: note: in expansion of macro ‘ZEND_FE’
 #define PHP_FE   ZEND_FE
                  ^
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: note: in expansion of macro ‘PHP_FE’
     PHP_FE(taglib_test_func, NULL) 
     ^
/usr/local/include/php/Zend/zend_API.h:71:129: warning: excess elements in scalar initializer
 #define ZEND_FENTRY(zend_name, name, arg_info, flags) { #zend_name, name, arg_info, (zend_uint) (sizeof(arg_info)/sizeof(struct _zend_arg_info)-1), flags },
                                                                                                                                 ^
/usr/local/include/php/Zend/zend_API.h:77:38: note: in expansion of macro ‘ZEND_FENTRY’
 #define ZEND_FE(name, arg_info)      ZEND_FENTRY(name, ZEND_FN(name), arg_info, 0)
                                      ^
/usr/local/include/php/main/php.h:352:18: note: in expansion of macro ‘ZEND_FE’
 #define PHP_FE   ZEND_FE
                  ^
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: note: in expansion of macro ‘PHP_FE’
     PHP_FE(taglib_test_func, NULL) 
     ^
/usr/local/include/php/Zend/zend_API.h:71:129: warning: (near initialization for ‘php_taglib_functions[0]’)
 #define ZEND_FENTRY(zend_name, name, arg_info, flags) { #zend_name, name, arg_info, (zend_uint) (sizeof(arg_info)/sizeof(struct _zend_arg_info)-1), flags },
                                                                                                                                 ^
/usr/local/include/php/Zend/zend_API.h:77:38: note: in expansion of macro ‘ZEND_FENTRY’
 #define ZEND_FE(name, arg_info)      ZEND_FENTRY(name, ZEND_FN(name), arg_info, 0)
                                      ^
/usr/local/include/php/main/php.h:352:18: note: in expansion of macro ‘ZEND_FE’
 #define PHP_FE   ZEND_FE
                  ^
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:21:5: note: in expansion of macro ‘PHP_FE’
     PHP_FE(taglib_test_func, NULL) 
     ^
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:22:5: warning: braces around scalar initializer
     { NULL, NULL, NULL }
     ^
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:22:5: warning: (near initialization for ‘php_taglib_functions[1]’)
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:22:5: warning: initialization makes integer from pointer without a cast
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:22:5: warning: (near initialization for ‘php_taglib_functions[1]’)
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:22:5: warning: excess elements in scalar initializer
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:22:5: warning: (near initialization for ‘php_taglib_functions[1]’)
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:22:5: warning: excess elements in scalar initializer
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:22:5: warning: (near initialization for ‘php_taglib_functions[1]’)
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:32:5: warning: initialization from incompatible pointer type
     php_taglib_functions, /* Functions */
     ^
/home/tso/taglib-php/php-5.6.7/ext/taglib/taglib.c:32:5: warning: (near initialization for ‘taglib_module_entry.functions’)
make: *** [taglib.lo] Error 1
